# qwail

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  architecture.md  compose.yml  example.env  pyproject.toml  setup.cfg  template.env  tombi.toml
.github/: badge.py  dependabot.yml
.github/workflows/: codeql.yml  pages.yml  tests.yml
alembic/: env.py
app/: __init__.py  main.py
qwail/: __init__.py  cli.py  main.py
qwail/core/: config.py  db.py
scripts/: clean.sh  format.sh  lint.sh  run-tests.sh  server.sh  test.sh
templates/: index.html
tests/: test_core.py  test_main.py
