[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwail"
version = "0.1.0"
description = "Test project, Ecommerce platform."
readme = "README.md"
authors = [
    { name = "Dayal Moirangthem", email = "daylmo@proton.me" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "libpass[argon2,bcrypt]>=1.9.1.post0",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.5.0",
    "redis[hiredis]>=6.4.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "git-cliff>=2.10.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.uv]
environments = [
  "platform_python_implementation != 'PyPy'"
]
package = false

[tool.mypy]
allow_untyped_globals = true
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
warn_redundant_casts = true
warn_unused_ignores = true

plugins = [
  "pydantic.mypy"
]

exclude = [
  "tests/"
]

[[tool.mypy.overrides]]
module = ["qwail.*.migrations.*"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "F",
  "FURB",
  "G",
  "I",
  "ISC001",
  "ISC002",
  "LOG",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "RET",
  "T20",
  "UP",
  "W"
]
ignore = [
  "B009", # Do not call getattr with a constant value
  "B010", # Do not call setattr with a constant value
  "B023", # Function definition does not bind loop variable
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in __init__
  "D202", # No blank lines allowed after function docstring
  "D203", # 1 blank line required before class docstring
  "D206", # Docstring should be indented with spaces, not tabs
  "D213", # Multi-line docstring summary should start at the second line
  "D407", # Missing dashed underline after section
  "E501", # Line too long
  "PT019", # Fixture without value is injected as parameter, use @pytest.mark.usefixtures instead
  "PYI041", # Use `float` instead of `int | float`
  "RET504", # Unnecessary assignment before return statement
  "UP046" # Parameter syntax for generic classes; not supported by mypy: https://github.com/python/mypy/issues/18507
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["qwail"]

[tool.coverage.run]
branch = true
source = "qwail"
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/fixtures.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING",
    "@overload",
    ]

[tool.pytest]
minversion = "8.0"
addopts = "-n auto --record-mode=none --disable-socket --allow-unix-socket"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "fixture"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
